fiz um carrossel de imagens.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,37 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section class="carousel-container">
+            <button class="carousel-button prev">&#10094;</button>
+            <div class="carousel">
+                <div class="carousel-slides">
+                    <a href="pagina1.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide1.png" alt="Promoção 1">
+                    </a>
+                    <a href="pagina2.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide2.jpg" alt="Promoção 2">
+                    </a>
+                    <a href="pagina3.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide3.jpg" alt="Promoção 3">
+                    </a>
+                    <a href="pagina4.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide4.jpg" alt="Promoção 4">
+                    </a>
+                </div>
+            </div>
+            <button class="carousel-button next">&#10095;</button>
+            <div class="carousel-indicators">
+                <span class="indicator" data-slide="0"></span>
+                <span class="indicator" data-slide="1"></span>
+                <span class="indicator" data-slide="2"></span>
+                <span class="indicator" data-slide="3"></span>
+            </div>
+        </section>
+        <div class="overlay-image">
+            <img src="./Imagens/Carrosel/ShapeCarrosel.png" alt="Imagem sobreposta">
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
