Fiz uma sessão para nossa página

--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
         <div class="overlay-image">
             <img src="./Imagens/Carrosel/ShapeCarrosel.png" alt="Imagem sobreposta">
         </div>
+        <section class="products-section">
+            <h2>Conheça Nossos Produtos</h2>
+            <div class="products-container">
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Sorvetes.jpg" alt="Produto 1">
+                    <div class="product-text">Sorvetes</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Confeitaria.png" alt="Produto 2">
+                    <div class="product-text">Confeitaria</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Bebidas.png" alt="Produto 3">
+                    <div class="product-text">Bebidas</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
