Seção sobre a loja
fiz uma seção que conta um pouco sobre a história da loja

--- a/index.html
+++ b/index.html
@@ -28,6 +28,72 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section class="carousel-container">
+            <button class="carousel-button prev">&#10094;</button>
+            <div class="carousel">
+                <div class="carousel-slides">
+                    <a href="pagina1.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide1.png" alt="Promoção 1">
+                    </a>
+                    <a href="pagina2.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide2.jpg" alt="Promoção 2">
+                    </a>
+                    <a href="pagina3.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide3.jpg" alt="Promoção 3">
+                    </a>
+                    <a href="pagina4.html" class="carousel-slide">
+                        <img src="./Imagens/Carrosel/Slide4.jpg" alt="Promoção 4">
+                    </a>
+                </div>
+            </div>
+            <button class="carousel-button next">&#10095;</button>
+            <div class="carousel-indicators">
+                <span class="indicator" data-slide="0"></span>
+                <span class="indicator" data-slide="1"></span>
+                <span class="indicator" data-slide="2"></span>
+                <span class="indicator" data-slide="3"></span>
+            </div>
+        </section>
+        <div class="overlay-image">
+            <img src="./Imagens/Carrosel/ShapeCarrosel.png" alt="Imagem sobreposta">
+        </div>
+        <section class="products-section">
+            <h2>Conheça Nossos Produtos</h2>
+            <div class="products-container">
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Sorvetes.jpg" alt="Produto 1">
+                    <div class="product-text">Sorvetes</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Confeitaria.png" alt="Produto 2">
+                    <div class="product-text">Confeitaria</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+                <div class="product-item">
+                    <img src="./Imagens/Produtos/Bebidas.png" alt="Produto 3">
+                    <div class="product-text">Bebidas</div>
+                    <a href="#" class="product-button">Confira</a>
+                </div>
+            </div>
+        </section>
+        <section class="about-section">
+            <div class="about-content">
+                <div class="about-image-wrapper">
+                <img src="./Imagens/Sobre Nós/Loja.jpg" alt="Foto da Loja" class="about-image">
+            </div>
+                <div class="about-text">
+                    <div class="about-header">
+                        <img src="./Imagens/Logo/Logo.png" alt="Logo da Loja" class="about-logo">
+                        <h2>Sobre nós</h2>
+                    </div>
+                    <p>Criada por três amigos, desde 2024 a Casquinha de bala oferece sorvetes, doces e bebidas de qualidade, produzidos com ingredientes selecionados e com sabores pensados para surpreender.</p>
+                    <a href="#" class="about-button">Conheça mais sobre a Casquinha de bala</a>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
