Fiz uma seção de Anúncios

--- a/index.html
+++ b/index.html
@@ -93,6 +93,22 @@
                 </div>
             </div>
         </section>
+        <section class="ads-section">
+            <div class="ad-box">
+                <img src="./Imagens/Anuncios/Cardapio.png" alt="Anúncio 1" class="ad-image">
+                <div class="ad-text">
+                    <h3>Nosso Cardápio!</h3>
+                    <a href="#" class="ad-button">Confira</a>
+                </div>
+            </div>
+            <div class="ad-box">
+                <img src="./Imagens/Anuncios/Ifood.png" alt="Anúncio 2" class="ad-image">
+                <div class="ad-text">
+                    <h3>Estamos no Ifood!</h3>
+                    <a href="https://www.ifood.com.br/" class="ad-button">Confira</a>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
