Fiz uma sessão para o Instagram

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
                 </div>
             </div>
         </section>
+        <section class="instagram-section">
+            <p>Siga a gente no Instagram!</p>
+            <a href="https://www.instagram.com" class="instagram-button">
+                <img src="./Imagens/Instagram/InstagramLogo.png" alt="Instagram">
+                Confira
+            </a>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
