fiz alguns ajustes no index

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </a>
         <div class="nav-container">
             <ul class="nav-bar">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="#">Lançamentos</a></li>
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Localização</a></li>
-                <li><a href="#">Feedbacks</a></li>
+                <li><a id="atual" href="index.html">Início</a></li>
+                <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="quemsomos.html">Quem somos</a></li>
+                <li><a href="localização.html">Localização</a></li>
+                <li><a href="feedbacks.html">Feedbacks</a></li>
             </ul>
         </div>
     </header>
@@ -117,10 +117,9 @@
             </a>
         </section>
     </main>
-    <script src="script.js"></script>
     <footer class="custom-footer">
         <div class="overlay-image2">
-            <img src="./Imagens/shape-footer.png" alt="Imagem sobreposta2">
+            <img src="./Imagens/Footer/ShapeFooter.png" alt="Imagem sobreposta2">
         </div>
         <div class="logo-footer">
             <img src="./Imagens/Header/LogoHeader.png">
@@ -129,8 +128,8 @@
             <div class="footer-left">
                 <ul class="footer-nav">
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#">Encomendar</a></li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="https://www.ifood.com.br/">Encomendar</a></li>
+                    <li><a href="quemsomos.html">Sobre nós</a></li>
                 </ul>
             </div>
             <div class="footer-center">
@@ -148,5 +147,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
