Fiz a pagina de feedbacks

--- a/feedbacks.html
+++ b/feedbacks.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casquinha de Bala Sorveteria e Confeitaria</title>
     <link rel="stylesheet" href="styleFeedbacks.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Spicy+Rice&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-<link rel="icon" href="./Imagens/Logo/Logo.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Spicy+Rice&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="./Imagens/Logo/Logo.png" type="image/x-icon">
 </head>
+
 <body>
     <header class="header">
         <a href="index.html" class="logo">
@@ -20,106 +24,121 @@
         </a>
         <div class="nav-container">
             <ul class="nav-bar">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="#">Lançamentos</a></li>
-                <li><a href="#">Quem somos</a></li>
-                <li><a href="#">Localização</a></li>
-                <li><a href="#">Feedbacks</a></li>
+                <li><a id="atual" href="index.html">Início</a></li>
+                <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="quemsomos.html">Quem somos</a></li>
+                <li><a href="localização.html">Localização</a></li>
+                <li><a href="feedbacks.html">Feedbacks</a></li>
             </ul>
         </div>
     </header>
     <main>
+        <h2>Feedback de famosos</h2>
         <section class="feedback-section">
-            <div class="container">
-                <div class="section">
-                    <img src="receba.png" alt="Famoso 1">
-                    <div class="text">
-                        <p>"Melhor sorfeteria du mundu RECEBA delyciozo hummm"</p>
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/LuvaDePedreiro.jpeg" alt="Foto do Famoso 1">
+                        <p class="feedback-name">Luva de Pedreiro</p>
                     </div>
-                    <div class="esquerda">
-                        <h2>Luva de Pedreiro</h2>
-                    </div>
-                </div>
-
-                <div class="section">
-                    <div class="text">
-                        <p>"Simplesmente maravilhoso! A qualidade dos sorvetes é impecável e o atendimento é excelente. É um lugar que todos deveriam visitar!"</p>
-                    </div>
-                    <img src="Captura de tela 2024-08-21 183119.png" alt="Famoso 2" class="right">
-                    <div class="direita">
-                        <h2>Anitta</h2>
+                    <div class="feedback-text">
+                        <p>"Receba! A sorveteria mais top que já visitei! Sorvete geladinho e gostoso demais, tá aprovado pelo Luva! Show de bola, obrigado, meu parceiro!"</p>
                     </div>
                 </div>
-
-                <div class="section">
-                    <img src="borabil.jpeg" alt="Famoso 1">
-                    <div class="text">
-                        <p>"A sorveteria é um verdadeiro paraíso dos sabores! Cada vez que vou lá, descubro algo novo e delicioso. Recomendo a todos!"</p>
+            </div>
+        
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/Anitta.jpg" alt="Foto do Famoso 2">
+                        <p class="feedback-name">Anitta</p>
                     </div>
-                    <div class="esquerda">
-                        <h2>Bora bill</h2>
-                    </div>
-                </div>
-
-                <div class="section">
-                    <div class="text">
-                        <p>"Simplesmente maravilhoso! A qualidade dos sorvetes é impecável e o atendimento é excelente. É um lugar que todos deveriam visitar!"</p>
-                    </div>
-                    <img src="Captura de tela 2024-08-21 190048.png" alt="Famoso 2" class="right">
-                    <div class="direita">
-                        <h2>Chico Moedas</h2>
+                    <div class="feedback-text">
+                        <p>"Gente, que sorveteria maravilhosa! Além dos sabores incríveis, o atendimento é impecável. Com certeza vou voltar muitas vezes. Amei!"</p>
                     </div>
                 </div>
-
-                <div class="section">
-                    <img src="Captura de tela 2024-08-21 191033.png" alt="Famoso 1">
-                    <div class="text">
-                        <p>"A sorveteria é um verdadeiro paraíso dos sabores! Cada vez que vou lá, descubro algo novo e delicioso. Recomendo a todos!"</p>
+            </div>
+        
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/BoraBill.jpeg" alt="Foto do Famoso 3">
+                        <p class="feedback-name">Bora Bill</p>
                     </div>
-                    <div class="esquerda">
-                        <h2>David</h2>
+                    <div class="feedback-text">
+                        <p>"Sabe porque não existe sorvete ruim aqui? Porque sorveteria ruim não é lugar que se vai... KKKKKKKKKKKKKK."</p>
                     </div>
                 </div>
+            </div>
 
-                <div class="section">
-                    <div class="text">
-                        <p>"Simplesmente maravilhoso! A qualidade dos sorvetes é impecável e o atendimento é excelente. É um lugar que todos deveriam visitar!"</p>
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/ChicoMoedas.jpg" alt="Foto do Famoso 4">
+                        <p class="feedback-name">Chico Moedas</p>
                     </div>
-                    <img src="Captura de tela 2024-08-21 191912.png" alt="Famoso 2" class="right">
-                    <div class="direita">
-                        <h2>Youtuber de Minecraft</h2>
+                    <div class="feedback-text">
+                        <p>"EU TENTEEEEI não gostar do sorvete, mas não deu. Sabor incrível e qualidade que não se vê por aí. Nota 10 para o banheiro!"</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/David.png" alt="Foto do Famoso 5">
+                        <p class="feedback-name">David</p>
+                    </div>
+                    <div class="feedback-text">
+                        <p>"Sorvete raiz para um hétero raiz igual a mim! Vou trazer todos os meus amigos do fut aqui. Amei!"</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="feedback-container">
+                <div class="feedback-content">
+                    <div class="feedback-photo">
+                        <img src="./Imagens/Famosos/YoutuberDeMinecraft.png" alt="Foto do Famoso 6">
+                        <p class="feedback-name">Youtuber de Minecraft</p>
+                    </div>
+                    <div class="feedback-text">
+                        <p>"Esse sorvete é tão bom que até o Creeper ia ficar de boa só para saborear! Combinação perfeita de sabor e textura. Recomendo a todos os meus inscritos!"</p>
                     </div>
                 </div>
             </div>
         </section>
-        <footer class="custom-footer">
-            <div class="overlay-image2">
-                <img src="./Imagens/shape-footer.png" alt="Imagem sobreposta2">
-            </div>
-            <div class="logo-footer">
-                <img src="./Imagens/Header/LogoHeader.png">
-            </div>
-            <div class="footer-container">
-                <div class="footer-left">
-                    <ul class="footer-nav">
-                        <li><a href="index.html">Início</a></li>
-                        <li><a href="#">Encomendar</a></li>
-                        <li><a href="#">Sobre nós</a></li>
-                    </ul>
-                </div>
-                <div class="footer-center">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#de8756"
-                                class="bi bi-instagram" viewBox="0 0 16 16">
-                                <path
-                                    d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
-                            </svg></a>
-                    </div>
-                    <p>Trabalho Bimestral 1 - LPW</p>
-                </div>
-                <div class="footer-right">
-                    <p class="criadores">Criado por: Gabriel Bresolin, Mariana Travassos e João Paulo</p>
-                </div>
-            </div>
-        </footer>
     </main>
+    <footer class="custom-footer">
+        <div class="overlay-image2">
+            <img src="./Imagens/Footer/ShapeFooter.png" alt="Imagem sobreposta2">
+        </div>
+        <div class="logo-footer">
+            <img src="./Imagens/Header/LogoHeader.png">
+        </div>
+        <div class="footer-container">
+            <div class="footer-left">
+                <ul class="footer-nav">
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="#">Encomendar</a></li>
+                    <li><a href="#">Sobre nós</a></li>
+                </ul>
+            </div>
+            <div class="footer-center">
+                <div class="social-icons">
+                    <a href="https://www.instagram.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            fill="#de8756" class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                        </svg></a>
+                </div>
+                <p>Trabalho Bimestral 1 - LPW</p>
+            </div>
+            <div class="footer-right">
+                <p class="criadores">Criado por: Gabriel Bresolin, Mariana Travassos e João Paulo</p>
+            </div>
+        </div>
+    </footer>
+    <script src="script.js"></script>
+</body>
+
+</html>
