--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
         <div class="nav-container">
             <ul class="nav-bar">
-                <li><a id="atual" href="index.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="cardapio.html">Cardápio</a></li>
                 <li><a href="quemsomos.html">Quem somos</a></li>
                 <li><a href="localização.html">Localização</a></li>
@@ -64,17 +64,17 @@
                 <div class="product-item">
                     <img src="./Imagens/Produtos/Sorvetes.jpg" alt="Produto 1">
                     <div class="product-text">Sorvetes</div>
-                    <a href="#" class="product-button">Confira</a>
+                    <a href="cardapio.html" class="product-button">Confira</a>
                 </div>
                 <div class="product-item">
                     <img src="./Imagens/Produtos/Confeitaria.png" alt="Produto 2">
                     <div class="product-text">Confeitaria</div>
-                    <a href="#" class="product-button">Confira</a>
+                    <a href="cardapio.html#confeitaria" class="product-button">Confira</a>
                 </div>
                 <div class="product-item">
                     <img src="./Imagens/Produtos/Bebidas.png" alt="Produto 3">
                     <div class="product-text">Bebidas</div>
-                    <a href="#" class="product-button">Confira</a>
+                    <a href="cardapio.html#bebidas" class="product-button">Confira</a>
                 </div>
             </div>
         </section>
@@ -89,7 +89,7 @@
                         <h2>Sobre nós</h2>
                     </div>
                     <p>Criada por três amigos, desde 2024 a Casquinha de bala oferece sorvetes, doces e bebidas de qualidade, produzidos com ingredientes selecionados e com sabores pensados para surpreender.</p>
-                    <a href="#" class="about-button">Conheça mais sobre a Casquinha de bala</a>
+                    <a href="quemsomos.html" class="about-button">Conheça mais sobre a Casquinha de bala</a>
                 </div>
             </div>
         </section>
@@ -98,7 +98,7 @@
                 <img src="./Imagens/Anuncios/Cardapio.png" alt="Anúncio 1" class="ad-image">
                 <div class="ad-text">
                     <h3>Nosso Cardápio!</h3>
-                    <a href="#" class="ad-button">Confira</a>
+                    <a href="cardapio.html" class="ad-button">Confira</a>
                 </div>
             </div>
             <div class="ad-box">
@@ -111,7 +111,7 @@
         </section>
         <section class="instagram-section">
             <p>Siga a gente no Instagram!</p>
-            <a href="https://www.instagram.com" class="instagram-button">
+            <a href="https://www.instagram.com/casquinhadebalasorveteria/" class="instagram-button">
                 <img src="./Imagens/Instagram/InstagramLogo.png" alt="Instagram">
                 Confira
             </a>
@@ -134,7 +134,7 @@
             </div>
             <div class="footer-center">
                 <div class="social-icons">
-                    <a href="https://www.instagram.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#de8756"
+                    <a href="https://www.instagram.com/casquinhadebalasorveteria/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#de8756"
                             class="bi bi-instagram" viewBox="0 0 16 16">
                             <path
                                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
