--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
             <button class="carousel-button prev">&#10094;</button>
             <div class="carousel">
                 <div class="carousel-slides">
-                    <a href="pagina1.html" class="carousel-slide">
+                    <div class="carousel-slide">
                         <img src="./Imagens/Carrosel/Slide1.png" alt="Promoção 1">
-                    </a>
-                    <a href="pagina2.html" class="carousel-slide">
+                    </div>
+                    <div class="carousel-slide">
                         <img src="./Imagens/Carrosel/Slide2.jpg" alt="Promoção 2">
-                    </a>
-                    <a href="pagina3.html" class="carousel-slide">
+                    </div>
+                    <div class="carousel-slide">
                         <img src="./Imagens/Carrosel/Slide3.jpg" alt="Promoção 3">
-                    </a>
-                    <a href="pagina4.html" class="carousel-slide">
+                    </div>
+                    <div class="carousel-slide">
                         <img src="./Imagens/Carrosel/Slide4.jpg" alt="Promoção 4">
-                    </a>
+                    </div>
                 </div>
             </div>
             <button class="carousel-button next">&#10095;</button>
@@ -118,9 +118,6 @@
         </section>
     </main>
     <footer class="custom-footer">
-        <div class="overlay-image2">
-            <img src="./Imagens/Footer/ShapeFooter.png" alt="Imagem sobreposta2">
-        </div>
         <div class="logo-footer">
             <img src="./Imagens/Header/LogoHeader.png">
         </div>
